--- a/CManager.Presentation.GuiApp/App.xaml
+++ b/CManager.Presentation.GuiApp/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="CManager.Presentation.GuiApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CManager.Presentation.GuiApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:CManager.Presentation.GuiApp">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
